--- a/index.html
+++ b/index.html
@@ -106,10 +106,11 @@
             <p class="intro">Keep it minimal keep it Xperia!</p>
             <div class="btns">
                 <a class="btn btn-cta-primary" href="https://basketbuild.com/devs/XOSP">Downloads on BasketBuild</a>
+                <a class="btn btn-cta-primary" href="changelog.html">ChangeLog</a>
             </div>
             <ul class="meta list-inline">
             <i class="fa fa-paypal"></i>
-                        <li><a href="https://goo.gl/o5w9hI" target="_blank">Donate to the development!</a>
+                        <li><a href="https://goo.gl/l9m5rr" target="_blank">Donate to the development!</a>
                         </li>
             <i class="fa fa-github"></i>
                         <li><a href="https://goo.gl/o5w9hI" target="_blank">XOSP Sources on GitHub</a>
@@ -411,7 +412,7 @@
                                 <br>
                                 <span class="body">Maintains: Nexus 4 (mako), Redmi 1S (armani) and G3 (vs985, d855, d851, ls990 variants) </span>
                                 <br />
-                                <a href="https://plus.google.com/u/0/+C%C4%83linNeam%C5%A3u/posts"><i class="fa fa-google-plus"></i></a>
+                                <a href="https://plus.google.com/u/0/+NitinkumarChobhe/posts"><i class="fa fa-google-plus"></i></a>
                                 <a href="https://web.telegram.org/#/im?p=@Nitin1438"><i class="fa fa-paper-plane"></i></a>
                             </div>
                         </div>
