--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                         </li>
                         <li class="nav-item"><a class="scrollto" href="#xospapps">XOSPApps</a>
                         </li>
-                        <li class="nav-item"><a class="scrollto" href="#usefull_links">Usefull Links</a>
+                        <li class="nav-item"><a class="scrollto" href="#useful_links">Useful Links</a>
                         </li>
                         <li class="nav-item"><a class="scrollto" href="#contact">Contribute</a>
                         </li>
@@ -142,7 +142,7 @@
                     </div>
                     <div class="content">
                         <h3 class="sub-title">Android Marshmallow</h3>
-                        <p>ROM based always on the latest Android Version !</a>
+                        <p>We base our ROM always on the latest Android Version!</a>
                         </p>
                     </div>
                 </div>
@@ -152,7 +152,7 @@
                     </div>
                     <div class="content">
                         <h3 class="sub-title">Open Source</h3>
-                        <p>We are open to suggestions and improvements to our code sources, if you got don't esitate to make a pull request!
+                        <p>We are open to suggestions and improvements to our code source, if you got something don't esitate to make a pull request!
                         </p>
                     </div>
                 </div>
@@ -162,7 +162,7 @@
                     </div>
                     <div class="content">
                         <h3 class="sub-title">Community</h3>
-                        <p>Check out out community, we listen to you and we're open to new features and suggestions <a href="https://goo.gl/RZMYRL" target="_blank">Google+.</a>
+                        <p>Check out our community the place where to share opinions,stay up-to date with the latest news and upcoming features!  <a href="https://goo.gl/RZMYRL" target="_blank">Google+.</a>
                         </p>
                     </div>
                 </div>
@@ -173,7 +173,7 @@
                     </div>
                     <div class="content">
                         <h3 class="sub-title">Lots of Features</h3>
-                        <p>Apart the Xperia Apps and ROM design we include the most famous <a href="#features">features</a> from other great ROMs </p>
+                        <p>Apart the Xperia ROM design and featured apps we also include one of the most famous <a href="#features">features</a> from other great ROMs </p>
                     </div>
                 </div>
                 <div class="item col-md-4 col-sm-6 col-xs-12">
@@ -182,7 +182,7 @@
                     </div>
                     <div class="content">
                         <h3 class="sub-title">Smooth and Stable</h3>
-                        <p>That's the first thing we offer you! And you have my word that if this is isn't smooth for you then nothing else would be!</p>
+                        <p>That's the first thing we offer to you! And you have my word that if this is isn't smooth for you then nothing else would be!</p>
                     </div>
                 </div>
                 <div class="item col-md-4 col-sm-6 col-xs-12">
@@ -191,7 +191,7 @@
                     </div>
                     <div class="content">
                         <h3 class="sub-title">Available for many devices</h3>
-                        <p>The ROM is available for many devices around and growing at the same time! Want to build for your device? follow up this <a href="https://github.com/XOSP-Project/platform_manifest" target="_blank">link</a>
+                        <p>The ROM is available for many devices around and growing at the same time! If you also want to build for your device follow up this <a href="https://github.com/XOSP-Project/platform_manifest" target="_blank">link</a>
                         </p>
                     </div>
                 </div>
@@ -291,7 +291,7 @@
     <section id="xospapps" class="xospapps section">
         <div class="container">
             <h2 class="title text-center">XOSPApps</h2>
-            <p class="intro text-center">XOSPApps basically includes all the necessary XperiaApps which a user will use, they're always updated in every release exactly as Google apps are updated. The package also includes the configuration script for the ViPER Audio Engine. Here are the apps included in XOSPApps zip package:</p>
+            <p class="intro text-center">XOSPApps basically includes all the necessary XperiaApps which a user will ever use, they're always updated in every release exactly as Google apps are updated. The package also includes the configuration script for the ViPER Audio Engine. Here are the apps included in XOSPApps zip package:</p>
                 <div class="row text-center">
                     <ul class="feature-list list-unstyled">
                     
@@ -331,12 +331,11 @@
         </div>
     </section>
 
-    <section id="usefull_links" class="usefull_links section">
+    <section id="useful_links" class="useful_links section">
         <div class="container">
         <div class="row text-center">
             <ul class="feature-list list-unstyled">
-                <h2 class="title">Usefull Links</h2>                        
-                    <li><a href="changelog.html" target="_blank">XOSP Official Changelog</a></li>
+                <h2 class="title">Useful Links</h2>                        
                     <li><a href="https://github.com/XOSP-Project/platform_manifest" target="_blank">Build XOSP for your device!</a></li>
                     <li><a href="https://os4fvts.oneskyapp.com/admin/project/dashboard/project/136264" target="_blank">XOSP Translations</a></li> 
             </ul>
@@ -402,24 +401,6 @@
 
                     <div class="author-message">
                         <div class="profile">
-                            <img class="img-responsive" src="assets/profiles/Nitin.png" alt="" />
-                        </div>
-                        <!--//profile-->
-                        <div class="speech-bubble">
-                            <h3 class="sub-title">Nitinkumar Chobhe</h3>
-                            <div class="source">
-                                <span class="title"><b>Maintainer</b></span>
-                                <br>
-                                <span class="body">Maintains: Nexus 4 (mako), Redmi 1S (armani) and G3 (vs985, d855, d851, ls990 variants) </span>
-                                <br />
-                                <a href="https://plus.google.com/u/0/+NitinkumarChobhe/posts"><i class="fa fa-google-plus"></i></a>
-                                <a href="https://web.telegram.org/#/im?p=@Nitin1438"><i class="fa fa-paper-plane"></i></a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="author-message">
-                        <div class="profile">
                             <img class="img-responsive" src="assets/profiles/Shreesha.png" alt="" />
                         </div>
                         <div class="speech-bubble">
@@ -435,6 +416,24 @@
                         </div>
                     </div>
 
+                    <div class="author-message">
+                        <div class="profile">
+                            <img class="img-responsive" src="assets/profiles/Nitin.png" alt="" />
+                        </div>
+                        <!--//profile-->
+                        <div class="speech-bubble">
+                            <h3 class="sub-title">Nitinkumar Chobhe</h3>
+                            <div class="source">
+                                <span class="title"><b>Maintainer</b></span>
+                                <br>
+                                <span class="body">Maintains: Nexus 4 (mako), Redmi 1S (armani) and G3 (vs985, d855, d851, ls990 variants) </span>
+                                <br />
+                                <a href="https://plus.google.com/u/0/+NitinkumarChobhe/posts"><i class="fa fa-google-plus"></i></a>
+                                <a href="https://web.telegram.org/#/im?p=@Nitin1438"><i class="fa fa-paper-plane"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    
                     <div class="author-message">
                         <div class="profile">
                             <img class="img-responsive" src="assets/profiles/Vikrant.png" alt="" />
