Improved XOSP Logo on Mobile phones view
Signed-off-by: nilac8991 <nilac8991@gmail.com>

--- a/index.html
+++ b/index.html
@@ -100,9 +100,7 @@
     <!-- Promo -->
     <section id="promo" class="promo section offset-header">
         <div class="container text-center">
-        <div id="logo-background">
-        <img alt="XOSP Logo" src="assets/images/xosp_white.png" />
-        </div>
+        <div style="text-align: center"><img src="assets/images/xosp_white.png" width="350" /></div>
             <p class="intro">Keep it minimal keep it Xperia!</p>
             <div class="btns">
                 <a class="btn btn-cta-primary" href="https://basketbuild.com/devs/XOSP">Downloads on BasketBuild</a>
@@ -487,7 +485,7 @@
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    })(window,document,'script','http://www.google-analytics.com/analytics.js','ga');
 
     ga('create', 'UA-74922052-1', 'auto');
     ga('send', 'pageview');
