--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 
   Official Website for XOSP ROM. Website created by Xiaoying Riley, built by the OwnDroid Team,redesigned Calin Neamtu for XOSP ROM.
   Code available on Github:
-  https://github.com/OwnROM/ownrom.github.io
+  https:screenshots/github.com/OwnROM/ownrom.github.io
 -->
     <!--Import Google Icon Font
-      <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+      <link href="http:screenshots/fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
       <!--Import materialize.css
       <link type="text/css" rel="stylesheet" href="assets/plugins/materialize/css/materialize.min.css"  media="screen,projection"/>
 
@@ -34,7 +34,7 @@
 
     <body>
       <!--Import jQuery before materialize.js
-      <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+      <script type="text/javascript" src="https:screenshots/code.jquery.com/jquery-2.1.1.min.js"></script>
       <script type="text/javascript" src="assets/plugins/materialize/js/materialize.min.js"></script>
     </body> -->
     <meta name="description" content="XOSP basically which stands for the Xperia Open Source Project is project based on CM and the main idea is to create a custom minimal Xperia based ROM, by including the essential things which a user would use from a ROM.">
@@ -43,8 +43,8 @@
     <meta name=theme-color content="#303f9f">
     <meta name="viewport" content="width=device-width">
     <link rel="shortcut icon" href="favicon.ico">
-    <link href='http://fonts.googleapis.com/css?family=Lato:300,400,300italic,400italic' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+    <link href='http:screenshots/fonts.googleapis.com/css?family=Lato:300,400,300italic,400italic' rel='stylesheet' type='text/css'>
+    <link href='http:screenshots/fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
     <!-- Global CSS -->
     <link rel="stylesheet" href="assets/plugins/bootstrap/css/bootstrap.min.css">
     <!-- Plugins CSS -->
@@ -52,7 +52,7 @@
     <link rel="stylesheet" href="assets/plugins/prism/prism.css">
     <!-- Theme CSS -->
     <link id="theme-style" rel="stylesheet" href="assets/css/styles.css">
-    <link href='http://fonts.googleapis.com/css?family=Roboto:500,100,300,700,400' rel='stylesheet' type='text/css'>
+    <link href='http:screenshots/fonts.googleapis.com/css?family=Roboto:500,100,300,700,400' rel='stylesheet' type='text/css'>
 </head>
 
 <body data-spy="scroll">
@@ -103,21 +103,21 @@
         <div style="text-align: center"><img src="assets/images/xosp_white.png" width="350" /></div>
             <p class="intro">Keep it minimal keep it Xperia!</p>
             <div class="btns">
-                <a class="btn btn-cta-primary" href="https://basketbuild.com/devs/XOSP">Downloads on BasketBuild</a>
+                <a class="btn btn-cta-primary" href="https:screenshots/basketbuild.com/devs/XOSP">Downloads on BasketBuild</a>
                 <a class="btn btn-cta-primary" href="changelog.html">ChangeLog</a>
             </div>
             <ul class="meta list-inline">
             <i class="fa fa-paypal"></i>
-                        <li><a href="https://goo.gl/l9m5rr" target="_blank">Donate to the development!</a>
+                        <li><a href="https:screenshots/goo.gl/l9m5rr" target="_blank">Donate to the development!</a>
                         </li>
             <i class="fa fa-github"></i>
-                        <li><a href="https://goo.gl/o5w9hI" target="_blank">XOSP Sources on GitHub</a>
+                        <li><a href="https:screenshots/goo.gl/o5w9hI" target="_blank">XOSP Sources on GitHub</a>
                         </li>
             <i class="fa fa-github"></i>
-                        <li><a href="https://goo.gl/LhO6u1" target="_blank">XOSP Devices Sources on Github</a>
+                        <li><a href="https:screenshots/goo.gl/LhO6u1" target="_blank">XOSP Devices Sources on Github</a>
                         </li>
             <i class="fa fa-google-plus"></i>
-                        <li><a href="https://goo.gl/RZMYRL" target="_blank">Community</a>
+                        <li><a href="https:screenshots/goo.gl/RZMYRL" target="_blank">Community</a>
                         </li>
             </ul>
         </div>
@@ -160,7 +160,7 @@
                     </div>
                     <div class="content">
                         <h3 class="sub-title">Community</h3>
-                        <p>Check out our community the place where to share opinions,stay up-to date with the latest news and upcoming features!  <a href="https://goo.gl/RZMYRL" target="_blank">Google+.</a>
+                        <p>Check out our community the place where to share opinions,stay up-to date with the latest news and upcoming features!  <a href="https:screenshots/goo.gl/RZMYRL" target="_blank">Google+.</a>
                         </p>
                     </div>
                 </div>
@@ -189,7 +189,7 @@
                     </div>
                     <div class="content">
                         <h3 class="sub-title">Available for many devices</h3>
-                        <p>The ROM is available for many devices around and growing at the same time! If you also want to build for your device follow up this <a href="https://github.com/XOSP-Project/platform_manifest" target="_blank">link</a>
+                        <p>The ROM is available for many devices around and growing at the same time! If you also want to build for your device follow up this <a href="https:screenshots/github.com/XOSP-Project/platform_manifest" target="_blank">link</a>
                         </p>
                     </div>
                 </div>
@@ -232,12 +232,8 @@
         <div class="container">
             <div class="row text-center">
                 <h2 class="title text-center">Screenshots</h2>
-                <!--    <img width="250" height="423" class="text-center" src="assets/images/rsz_test1.png" />
-                    <img width="250" height="423" class="text-center" src="assets/images/rsz_test1.png" />
                     <div class="btns">
-                        <a class="btn btn-cta-primary" href="https://basketbuild.com/devs/XOSP">More Screenshots</a>
-                -->
-                <h2 class="subtitle text-center">Coming soon!</h2>
+                        <a class="btn btn-cta-primary" href="screenshots.html">Se here the Screenshots of the ROM</a>
                 </h2>
             </div>
         </div>
@@ -334,8 +330,8 @@
         <div class="row text-center">
             <ul class="feature-list list-unstyled">
                 <h2 class="title">Useful Links</h2>                        
-                    <li><a href="https://github.com/XOSP-Project/platform_manifest" target="_blank">Build XOSP for your device!</a></li>
-                    <li><a href="https://os4fvts.oneskyapp.com/admin/project/dashboard/project/136264" target="_blank">XOSP Translations</a></li> 
+                    <li><a href="https:screenshots/github.com/XOSP-Project/platform_manifest" target="_blank">Build XOSP for your device!</a></li>
+                    <li><a href="https:screenshots/os4fvts.oneskyapp.com/admin/project/dashboard/project/136264" target="_blank">XOSP Translations</a></li> 
             </ul>
         </div>
         </div>
@@ -347,11 +343,10 @@
             <ul class="feature-list list-unstyled">
                 <h2 class="title text-center">Installation Instructions</h2>
                 <h3 class="subtitle text-center">First time installing XOSP, or coming from another ROM?</h3>
-                    <li><i class="fa fa-dot-circle-o "></i>Download latest build with the XOSPApps and latest GApps</li>
+                    <li><i class="fa fa-dot-circle-o "></i>Download latest build with the latest GApps</li>
                     <li><i class="fa fa-dot-circle-o "></i> Reboot recovery</li>
                     <li><i class="fa fa-dot-circle-o "></i> Wipe data factory reset</li>
                     <li><i class="fa fa-dot-circle-o "></i> Flash latest XOSP Build</li>
-                    <li><i class="fa fa-dot-circle-o "></i> Flash XOSPApps</li>
                     <li><i class="fa fa-dot-circle-o "></i> Flash GApps</li>
                     <li><i class="fa fa-dot-circle-o "></i> Reboot</li>
                     <li><i class="fa fa-dot-circle-o "></i> Note: As always, no one but only you can be held responsible if you (soft) brick your device.</li>
@@ -386,13 +381,13 @@
                         <div class="speech-bubble">
                             <h3 class="sub-title">Calin Neamtu (nilac)</h3>
                             <div class="source">
-                                <span class="title"><b>Founder and Main Developer</b></span>
+                                <span class="title"><b>Founder and Lead Developer</b></span>
                                 <br>
                                 <span class="body">Maintains: Zenfone 2 (Z00A,Z008 variants) </span>
                                 <br />
-                                <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=G8GQXJCCVVMS6"><i class="fa fa-paypal"></i></a>
-                                <a href="https://plus.google.com/u/0/+C%C4%83linNeam%C5%A3u/posts"><i class="fa fa-google-plus"></i></a>
-                                <a href="https://web.telegram.org/#/im?p=@nilac8991"><i class="fa fa-paper-plane"></i></a>
+                                <a href="https:screenshots/www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=G8GQXJCCVVMS6"><i class="fa fa-paypal"></i></a>
+                                <a href="https:screenshots/plus.google.com/u/0/+C%C4%83linNeam%C5%A3u/posts"><i class="fa fa-google-plus"></i></a>
+                                <a href="https:screenshots/web.telegram.org/#/im?p=@nilac8991"><i class="fa fa-paper-plane"></i></a>
                             </div>
                         </div>
                     </div>
@@ -408,8 +403,8 @@
                                 <br>
                                 <span class="body">Maintains: Android One (sprout4,sprout8 variants) and Motorola Moto E 4G second Gen (surnia) </span>
                                 <br />
-                                <a href="https://plus.google.com/u/0/+shreeshamurthy/posts"><i class="fa fa-google-plus"></i></a>
-                                <a href="https://web.telegram.org/#/im?p=@Shreesha_Murthy"><i class="fa fa-paper-plane"></i></a>
+                                <a href="https:screenshots/plus.google.com/u/0/+shreeshamurthy/posts"><i class="fa fa-google-plus"></i></a>
+                                <a href="https:screenshots/web.telegram.org/#/im?p=@Shreesha_Murthy"><i class="fa fa-paper-plane"></i></a>
                             </div>
                         </div>
                     </div>
@@ -418,7 +413,7 @@
                         <div class="profile">
                             <img class="img-responsive" src="assets/profiles/Nitin.png" alt="" />
                         </div>
-                        <!--//profile-->
+                        <!--screenshots/profile-->
                         <div class="speech-bubble">
                             <h3 class="sub-title">Nitinkumar Chobhe</h3>
                             <div class="source">
@@ -426,8 +421,8 @@
                                 <br>
                                 <span class="body">Maintains: Nexus 4 (mako), Redmi 1S (armani) and G3 (vs985, d855, d851, ls990 variants) </span>
                                 <br />
-                                <a href="https://plus.google.com/u/0/+NitinkumarChobhe/posts"><i class="fa fa-google-plus"></i></a>
-                                <a href="https://web.telegram.org/#/im?p=@Nitin1438"><i class="fa fa-paper-plane"></i></a>
+                                <a href="https:screenshots/plus.google.com/u/0/+NitinkumarChobhe/posts"><i class="fa fa-google-plus"></i></a>
+                                <a href="https:screenshots/web.telegram.org/#/im?p=@Nitin1438"><i class="fa fa-paper-plane"></i></a>
                             </div>
                         </div>
                     </div>
@@ -443,8 +438,8 @@
                                 <br>
                                 <span class="body">Maintains: Nexus 5 (hammerhead) </span>
                                 <br/>
-                                <a href="https://plus.google.com/u/0/110942027808556181904/posts"><i class="fa fa-google-plus"></i></a>
-                                <a href="https://web.telegram.org/#/im?p=@vikrant699"><i class="fa fa-paper-plane"></i></a>
+                                <a href="https:screenshots/plus.google.com/u/0/110942027808556181904/posts"><i class="fa fa-google-plus"></i></a>
+                                <a href="https:screenshots/web.telegram.org/#/im?p=@vikrant699"><i class="fa fa-paper-plane"></i></a>
                             </div>
                         </div>
                     </div>
@@ -457,15 +452,15 @@
         <div class="clearfix"></div>
         <div class="info text-center">
             <ul class="social-icons list-inline">
-                <li class="last" title"Join our community!"><a href="https://goo.gl/RZMYRL" target="_blank"><i class="fa fa-google-plus"></i></a>
+                <li class="last" title="Join our community!"><a href="https:screenshots/goo.gl/RZMYRL" target="_blank"><i class="fa fa-google-plus"></i></a>
                 </li>
-                <li class="last"><a href="https://goo.gl/o5w9hI" target="_blank"><i class="fa fa-github"></i></a>
+                <li class="last" title="Check out our sources!"><a href="https:screenshots/goo.gl/o5w9hI" target="_blank"><i class="fa fa-github"></i></a>
                 </li>
-                <li class="last"><a href="https://goo.gl/l9m5rr" target="_blank"><i class="fa fa-paypal"></i></a>
+                <li class="last" title="Support the development with a donation!"><a href="https:screenshots/goo.gl/l9m5rr" target="_blank"><i class="fa fa-paypal"></i></a>
                 </li>
-                <li class="last"><a href="https://telegram.me/xosp_channel" target="_blank"><i class="fa fa-paper-plane"></i></a>
+                <li class="last" title="Our official Telegram channel!"><a href="https:screenshots/telegram.me/xosp_channel" target="_blank"><i class="fa fa-paper-plane"></i></a>
                 </li>
-                <li class="last"><a href="mailto: xperiaopensourceproject@gmail.com"><i class="fa fa-envelope"></i></a>
+                <li class="last" title="Mail us!"><a href="mailto: xperiaopensourceproject@gmail.com"><i class="fa fa-envelope"></i></a>
                 </li>
             </ul>
         </div>
@@ -476,7 +471,7 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="container text-center">
-            <small class="copyright">Designed by <a href="http://themes.3rdwavemedia.com" target="_blank">Xiaoying Riley</a> built by <a href="http://bit.ly/1Fye9Gd" target="_blank">The OwnDroid Team</a> redesigned by <a href="https://plus.google.com/u/0/+C%C4%83linNeam%C5%A3u/posts" target="_blank">Calin Neamtu</a> for XOSP ROM </small>
+            <small class="copyright">Designed by <a href="http:screenshots/themes.3rdwavemedia.com" target="_blank">Xiaoying Riley</a> built by <a href="http:screenshots/bit.ly/1Fye9Gd" target="_blank">The OwnDroid Team</a> redesigned by <a href="https:screenshots/plus.google.com/u/0/+C%C4%83linNeam%C5%A3u/posts" target="_blank">Calin Neamtu</a> for XOSP ROM </small>
         </div>
     </footer>
 
@@ -485,7 +480,7 @@
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','http://www.google-analytics.com/analytics.js','ga');
+    })(window,document,'script','https:screenshots/www.google-analytics.com/analytics.js','ga');
 
     ga('create', 'UA-74922052-1', 'auto');
     ga('send', 'pageview');
