Fix download link
Signed-off-by: Calin <nilac8991@gmail.com>

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <div style="text-align: center"><img src="assets/images/xosp_white.png" width="350" /></div>
             <p class="intro">Keep it minimal keep it Xperia!</p>
             <div class="btns">
-                <a class="btn btn-cta-primary" href="https:screenshots/basketbuild.com/devs/XOSP">Downloads on BasketBuild</a>
+                <a class="btn btn-cta-primary" href="https://basketbuild.com/devs/XOSP">Downloads on BasketBuild</a>
                 <a class="btn btn-cta-primary" href="changelog.html">ChangeLog</a>
             </div>
             <ul class="meta list-inline">
