--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
             <div class="row text-center">
                 <h2 class="title text-center">Screenshots</h2>
                     <div class="btns">
-                        <a class="btn btn-cta-primary" href="screenshots.html">Se here the Screenshots of the ROM</a>
+                        <a class="btn btn-cta-primary" href="screenshots.html">See here the Screenshots of the ROM</a>
                 </h2>
             </div>
         </div>
