--- a/index.html
+++ b/index.html
@@ -330,8 +330,8 @@
         <div class="row text-center">
             <ul class="feature-list list-unstyled">
                 <h2 class="title">Useful Links</h2>                        
-                    <li><a href="https:screenshots/github.com/XOSP-Project/platform_manifest" target="_blank">Build XOSP for your device!</a></li>
-                    <li><a href="https:screenshots/os4fvts.oneskyapp.com/admin/project/dashboard/project/136264" target="_blank">XOSP Translations</a></li> 
+                    <li><a href="https://github.com/XOSP-Project/platform_manifest" target="_blank">Build XOSP for your device!</a></li>
+                    <li><a href="https://os4fvts.oneskyapp.com/admin/project/dashboard/project/136264" target="_blank">XOSP Translations</a></li> 
             </ul>
         </div>
         </div>
