--- a/screenshots.html
+++ b/screenshots.html
@@ -40,7 +40,7 @@
     <meta name="description" content="XOSP basically which stands for the Xperia Open Source Project is project based on CM and the main idea is to create a custom minimal Xperia based ROM, by including the essential things which a user would use from a ROM.">
     <meta name="author" content="Calin Neamtu">
     <meta name="keywords" content="Android,Custom ROM">
-    <meta name=theme-color content="#303f9f">
+    <meta name=theme-color content="#2c3e50">
     <meta name="viewport" content="width=device-width">
     <link rel="shortcut icon" href="favicon.ico">
     <link href='http://fonts.googleapis.com/css?family=Lato:300,400,300italic,400italic' rel='stylesheet' type='text/css'>
@@ -124,6 +124,7 @@
                 <a href="assets/images/screenshots/30.png"> <img width=250 height=423 class="text-center" src="assets/images/screenshots/30.png"> </a>
                 <a href="assets/images/screenshots/31.png"> <img width=250 height=423 class="text-center" src="assets/images/screenshots/31.png"> </a>
                 <a href="assets/images/screenshots/32.png"> <img width=250 height=423 class="text-center" src="assets/images/screenshots/32.png"> </a>
+                <a href="assets/images/screenshots/33.png"> <img width=250 height=423 class="text-center" src="assets/images/screenshots/33.png"> </a>
             </div>
         </div>
     </section>
